# omm-bundle

./: .bumpversion.cfg  .gitignore  Makefile  Makefile.manual  README.md  TODO  autogen.sh  build-omm  documentation_template.md  make.inc  make.inc.example  quickcheck.sh  wipeout.sh
MatrixSwitch/: .gitignore  Makefile.am  README  TODO  autogen.sh  configure.ac  quickcheck.sh  wipeout.sh
MatrixSwitch/config/data/: MatrixSwitch-config.yaml.in  MatrixSwitch.pc.in
MatrixSwitch/config/m4/: linalg.m4  mpi.m4  psp.m4  pspBLAS.m4
MatrixSwitch/doc/: Doxyfile  Makefile.am  configuring-MatrixSwitch.md  contributing-to-MatrixSwitch.md
MatrixSwitch/doc/api/: MatrixSwitch.md  MatrixSwitch_m_add.md  MatrixSwitch_m_copy.md  MatrixSwitch_m_register.md  MatrixSwitch_m_set.md  MatrixSwitch_mm_multiply.md  MatrixSwitch_ops.md  MatrixSwitch_wrapper.md  MatrixSwitch_wrapper_params.md
MatrixSwitch/examples/: Makefile.am  Makefile.manual  example1.F90  example2.F90  example3.F90  example4.F90  example_pdcsr_pddbc.F90  make.inc.example
MatrixSwitch/src/: Makefile  Makefile.am  Makefile.manual  MatrixSwitch.F90  MatrixSwitch_m_add.F90  MatrixSwitch_m_copy.F90  MatrixSwitch_m_register.F90  MatrixSwitch_m_set.F90  MatrixSwitch_mm_multiply.F90  MatrixSwitch_ops.F90  MatrixSwitch_wrapper.F90  MatrixSwitch_wrapper_params.F90  chess_types.f90  dependencies.mf  make.inc.example
examples/: Makefile  example7.F90  example8.F90  example9.F90  make.inc  make.inc.example
libOMM/: .gitignore  Makefile.am  README  autogen.sh  configure.ac  quickcheck.sh  wipeout.sh
libOMM/config/data/: libOMM.pc.in  libomm-config.yaml.in  libomm.pc.in
libOMM/config/m4/: MatrixSwitch.m4  fortran.m4  linalg.m4  mpi.m4  psp.m4  pspBLAS.m4
libOMM/doc/: Makefile.am  configuring-libOMM.md  configuring-libomm.md  contributing-to-libOMM.md  contributing-to-libomm.md  hacking-the-build-system.md
libOMM/doc/api/: omm.md  omm_callback.md  omm_ops.md  omm_params.md  omm_quartic.md  omm_rand.md  omm_wrapper.md
libOMM/doc/data/: omm_header.html
libOMM/examples/: Makefile  Makefile.am  Makefile.manual  example1.F90  example10.F90  example11.F90  example12.F90  example2.F90  example3.F90  example4.F90  example5.F90  example6.F90  example7.F90  example8.F90  example9.F90  example_gamma.F90  example_gamma_unpolarized.F90  example_gamma_unpolarized_overlap.F90  example_gamma_unpolarized_wrapper.F90  example_gamma_wrapper.F90  example_kpoints.F90  example_kpoints_wrapper.F90  make.inc  make.inc.example
libOMM/src/: Makefile  Makefile.am  Makefile.manual  dependencies.mf  make.inc  make.inc.example  omm.F90  omm_callback.F90  omm_ops.F90  omm_params.F90  omm_quartic.F90  omm_rand.F90  omm_wrapper.F90  omm_wrappers.F90  omm_wrappers_spm.F90
psp/: .gitignore  AUTHORS  Makefile  Makefile.am  TODO  autogen.sh  configure.ac  quickcheck.sh  wipeout.sh
psp/config/data/: psp-config.yml.in  psp.pc.in
psp/config/m4/: fortran.m4  linalg.m4  mpi.m4
psp/doc/: Makefile.am  configuring-psp.md  contributing-to-psp.md  hacking-the-build-system.md
psp/doc/data/: psp_header.html
psp/pspLevel3/: Makefile  pspMspm.F90  pspSpmm.F90
psp/pspUtility/: Makefile
psp/src/: Makefile.am  dependencies.mf  pspBLAS.F90
psp/src/pspLevel2/: pspLevel2.F90
psp/src/pspLevel3/: pspGemm.F90  pspLevel3.F90  pspMspm.F90  pspMspm_tn.F90  pspMspm_tt.F90  pspSpmSpm.F90  pspSpmSpm_nt.F90  pspSpmm.F90  pspSpmm_nn.F90  pspSpmm_nt.F90  pspSpmm_tn.F90  pspSpmm_tt.F90
psp/src/pspMPI/: pspMPI.F90
psp/src/pspUtility/: pspBasicTool.F90  pspListTool.F90  pspUtility.F90  psp_spBLAS_Level3.F90
psp/src/pspVariable/: Makefile  pspLinkedlist.F90  pspMat.F90  pspNode.F90  pspQueue.F90  pspVariable.F90
psp/test/: Makefile.am  Makefile.manual  pdgemm.F90  pdgemmScaling.F90  pzgemmScaling.F90
pspBLAS/: AUTHORS  COPYING  README  autogen.sh  configure.ac  quickcheck.sh
pspBLAS/doc/api/: pspBLAS.md
pspBLAS/doc/api/pspLevel1/: pspLevel1.md
pspBLAS/doc/api/pspLevel2/: pspLevel2.md
pspBLAS/doc/api/pspLevel3/: pspGemm.md  pspLevel3.md  pspMatSum.md  pspMspm.md  pspMspm_nn.md  pspMspm_nt.md  pspMspm_tn.md  pspMspm_tt.md  pspSpmSpm.md  pspSpmSpm_nn.md  pspSpmSpm_nt.md  pspSpmSpm_tn.md  pspSpmSpm_tt.md  pspSpmm.md  (+4 more)
pspBLAS/src/: Makefile.am  make.inc.example  pspBLAS.F90
pspBLAS/src/pspLevel1/: pspLevel1.F90
pspBLAS/src/pspLevel2/: pspLevel2.F90
pspBLAS/src/pspLevel3/: pspGemm.F90  pspLevel3.F90  pspMatSum.F90  pspMspm.F90  pspMspm_nn.F90  pspMspm_nt.F90  pspMspm_tn.F90  pspMspm_tt.F90  pspSpmSpm.F90  pspSpmSpm_nn.F90  pspSpmSpm_nt.F90  pspSpmSpm_tn.F90  pspSpmSpm_tt.F90  pspSpmm.F90  pspSpmm_nn.F90  pspSpmm_nt.F90  pspSpmm_tn.F90  pspSpmm_tt.F90
pspBLAS/src/pspMPI/: pspMPI.F90
pspBLAS/src/pspUtility/: pspBasicTool.F90  pspListTool.F90  pspUtility.F90  psp_spBLAS.F90  psp_spBLAS_Level1.F90  psp_spBLAS_Level2.F90  psp_spBLAS_Level3.F90
pspBLAS/src/pspVariable/: pspLinkedlist.F90  pspListType.F90  pspMat.F90  pspNode.F90  pspQueue.F90  pspVariable.F90  psp_dList.F90  psp_zList.F90
pspBLAS/test/: Makefile.am  Makefile.manual  compareSpBLAS.F90  matSum.F90  pdgemm.F90  pdgemmScaling.F90  pzgemmScaling.F90  spBLAS.F90  testList.F90  testMPI.F90  testMPI2.F90  testMPI3.F90
src/: Makefile  make.inc  omm_wrappers_spm.F90
src/MatrixSwitch-0.1.2/examples/: make.inc
src/MatrixSwitch-0.1.2/src/: Makefile  MatrixSwitch.F90  make.inc
src/psp/: Makefile  make.inc
src/psp/pspLevel1/: Makefile
src/psp/pspLevel2/: Makefile
src/psp/pspLevel3/: Makefile  pspGemm.F90  pspMspm.F90  pspSpmm.F90
src/psp/pspMPI/: Makefile
src/psp/pspUtility/: Makefile  pspUtility.F90
src/psp/pspVariable/: Makefile  pspVariable.F90
src/psp/test/: Makefile  make.inc  pdgemmScaling.F90  pzgemmScaling.F90
tomato/: Makefile.am  README  README.md  autogen.sh  configure.ac  quickcheck.sh  wipeout.sh
tomato/config/data/: tomato-config.yaml.in  tomato.pc.in
tomato/config/m4/: MatrixSwitch.m4  fortran.m4  linalg.m4  mpi.m4  pspBLAS.m4
tomato/doc/api/: tomato_TB.md
tomato/src/: Makefile  Makefile.am  Makefile.manual  make.inc  make.inc.example  tomato.F90  tomato_TB.F90
(+16 files in other folders)
