noinst_PROGRAMS = example1.x example2.x example3.x example4.x

example1_x_SOURCES = example1.F90
example1_x_FCFLAGS = -I../src
example1_x_LDADD = ../src/libMatrixSwitch.la

example2_x_SOURCES = example2.F90
example2_x_FCFLAGS = -I../src
example2_x_LDADD = ../src/libMatrixSwitch.la

example3_x_SOURCES = example3.F90
example3_x_FCFLAGS = -I../src
example3_x_LDADD = ../src/libMatrixSwitch.la

example4_x_SOURCES = example4.F90
example4_x_FCFLAGS = -I../src
example4_x_LDADD = ../src/libMatrixSwitch.la
