noinst_PROGRAMS = \
  example1.x \
  example2.x \
  example3.x \
  example4.x \
  example5.x \
  example6.x \
  example7.x \
  example8.x \
  example9.x \
  example10.x \
  example11.x \
  example12.x

example1_x_SOURCES = example1.F90
example1_x_FCFLAGS = -I../src
example1_x_LDADD = ../src/libomm.la

example2_x_SOURCES = example2.F90
example2_x_FCFLAGS = -I../src
example2_x_LDADD = ../src/libomm.la

example3_x_SOURCES = example3.F90
example3_x_FCFLAGS = -I../src
example3_x_LDADD = ../src/libomm.la

example4_x_SOURCES = example4.F90
example4_x_FCFLAGS = -I../src
example4_x_LDADD = ../src/libomm.la

example5_x_SOURCES = example5.F90
example5_x_FCFLAGS = -I../src
example5_x_LDADD = ../src/libomm.la

example6_x_SOURCES = example6.F90
example6_x_FCFLAGS = -I../src
example6_x_LDADD = ../src/libomm.la

example7_x_SOURCES = example7.F90
example7_x_FCFLAGS = -I../src
example7_x_LDADD = ../src/libomm.la

example8_x_SOURCES = example8.F90
example8_x_FCFLAGS = -I../src
example8_x_LDADD = ../src/libomm.la

example9_x_SOURCES = example9.F90
example9_x_FCFLAGS = -I../src
example9_x_LDADD = ../src/libomm.la

example10_x_SOURCES = example10.F90
example10_x_FCFLAGS = -I../src
example10_x_LDADD = ../src/libomm.la

example11_x_SOURCES = example11.F90
example11_x_FCFLAGS = -I../src
example11_x_LDADD = ../src/libomm.la

example12_x_SOURCES = example12.F90
example12_x_FCFLAGS = -I../src
example12_x_LDADD = ../src/libomm.la
